[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/units/player.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Bottom" type="Area2D" parent="."]
position = Vector2( 0, 12 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2( 0, -3.5625 )
shape = SubResource( 2 )

[node name="Top" type="Area2D" parent="."]
position = Vector2( 0, -12 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2( 0, 4.875 )
shape = SubResource( 2 )

[node name="TopLeft" type="Area2D" parent="."]
position = Vector2( -12, -8 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeft"]
shape = SubResource( 3 )

[node name="BottomLeft" type="Area2D" parent="."]
position = Vector2( -12, 8 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLeft"]
shape = SubResource( 3 )

[node name="TopRight" type="Area2D" parent="."]
position = Vector2( 12, -8 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRight"]
shape = SubResource( 4 )

[node name="BottomRight" type="Area2D" parent="."]
position = Vector2( 12, 8 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomRight"]
shape = SubResource( 4 )
